Add GHC-7.8.2 to travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ env:
  - GHCVER=7.6.1
  - GHCVER=7.6.2
  - GHCVER=7.6.3
+ - GHCVER=7.8.2
 # - GHCVER=head  # see section about GHC HEAD snapshots
 
 # Note: the distinction between `before_install` and `install` is not important.
