--- a/arbtt.cabal
+++ b/arbtt.cabal
@@ -181,7 +181,7 @@ test-suite test
   Build-depends:
       base == 4.5.* || == 4.6.* || == 4.7.*
       , tasty == 0.7.*
-      , tasty-golden == 2.2.*
+      , tasty-golden == 2.2.0.2
       , tasty-hunit == 0.2.*
       , HUnit == 1.2.*
       , process-extras == 0.2.*
