--- a/arbtt.cabal
+++ b/arbtt.cabal
@@ -31,7 +31,7 @@ executable arbtt-capture
     build-depends:
         base == 4.5.* || == 4.6.* || == 4.7.*,
         filepath, directory, transformers, time >= 1.4, utf8-string,
-        aeson == 0.6.*, array == 0.4.*,
+        aeson >= 0.6, array >= 0.4,
         binary >= 0.5,
         bytestring, deepseq, strict, old-locale
     other-modules:
@@ -71,11 +71,11 @@ executable arbtt-stats
     hs-source-dirs:     src
     build-depends:
         base == 4.5.* || == 4.6.* || == 4.7.*,
-        parsec == 3.*, containers == 0.5.*, pcre-light, old-locale,
+        parsec >= 3, containers >= 0.5, pcre-light, old-locale,
         binary >= 0.5,
         deepseq, bytestring, utf8-string, time >= 1.4, strict,
         transformers, unix, directory, filepath,
-        aeson == 0.6.*, array == 0.4.*,
+        aeson >= 0.6, array >= 0.4,
         terminal-progress-bar, bytestring-progress
     other-modules:
         Data
@@ -102,8 +102,8 @@ executable arbtt-dump
     hs-source-dirs:     src
     build-depends:
         base == 4.5.* || == 4.6.* || == 4.7.*,
-        parsec == 3.*, containers == 0.5.*,
-        aeson == 0.6.*, array == 0.4.*,
+        parsec >= 3, containers >= 0.5,
+        aeson >= 0.6, array >= 0.4,
         binary >= 0.5,
         deepseq, bytestring, utf8-string, time >= 1.4, strict,
         transformers, unix, directory, filepath,
@@ -129,7 +129,7 @@ executable arbtt-import
     hs-source-dirs:     src
     build-depends:
         base == 4.5.* || == 4.6.* || == 4.7.*,
-        parsec == 3.*, containers == 0.5.*,
+        parsec >= 3, containers >= 0.5,
         binary >= 0.5,
         deepseq, bytestring, utf8-string, time >= 1.4, strict,
         transformers, unix, directory, filepath
@@ -152,7 +152,7 @@ executable arbtt-recover
     hs-source-dirs:     src
     build-depends:
         base == 4.5.* || == 4.6.* || == 4.7.*,
-        parsec == 3.*, containers == 0.5.*,
+        parsec >= 3, containers >= 0.5,
         binary >= 0.5,
         deepseq, bytestring, utf8-string, time >= 1.4, strict,
         transformers, unix, directory, filepath
