--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ env:
 # - GHCVER=7.0.4
 # - GHCVER=7.2.1
 # - GHCVER=7.2.2
- - GHCVER=7.4.1
- - GHCVER=7.4.2
+# - GHCVER=7.4.1
+# - GHCVER=7.4.2
  - GHCVER=7.6.1
  - GHCVER=7.6.2
  - GHCVER=7.6.3
