example categorize.cfg: add local variable to set emacs to haskell-mode by adding the metadata, emacs users copying the example config get appropriate syntax highlighting without additional work, and other users are reminded that their favorite editor's haskell mode would work well in displaying arbtt configs

--- a/categorize.cfg
+++ b/categorize.cfg
@@ -1,3 +1,4 @@
+-- -*- mode: haskell; -*-
 -- Comments in this file use the Haskell syntax:
 -- A "--" comments the rest of the line.
 -- A set of {- ... -} comments out a group of lines.
@@ -106,7 +107,7 @@ $sampleage <= 24:00 ==> tag last-day,
 
 -- You can compare dates:
 $date >= 2001-01-01 ==> tag this_century,
--- You have to write them in YYYY-MM-DD format, else they will not be recognized. 
+-- You have to write them in YYYY-MM-DD format, else they will not be recognized.
 
 -- “format $date” produces a string with the date in ISO 8601 format
 -- (YYYY-MM-DD), it may be compared with strings. For example, to match
