--- a/arbtt.cabal
+++ b/arbtt.cabal
@@ -191,7 +191,7 @@ test-suite test
     test.hs
   Build-depends:
       base == 4.5.* || == 4.6.* || == 4.7.*
-      , tasty == 0.7.* || == 0.8.*
+      , tasty == 0.7.* || == 0.8.* || == 0.9.*
       , tasty-golden >= 2.2.0.2  && <= 2.3
       , tasty-hunit == 0.2.* || == 0.4.* || == 0.8.* || == 0.9.*
       , HUnit == 1.2.*
