--- a/arbtt.cabal
+++ b/arbtt.cabal
@@ -34,7 +34,7 @@ executable arbtt-capture
     main-is:            capture-main.hs
     hs-source-dirs:     src
     build-depends:
-        base == 4.5.* || == 4.6.* || == 4.7.*,
+        base == 4.5.* || == 4.6.* || == 4.7.* || == 4.8.*,
         filepath, directory, transformers, time >= 1.4, utf8-string,
         aeson == 0.6.* || == 0.7.* || == 0.8.*,
         array == 0.4.* || == 0.5.*,
