--- a/arbtt.cabal
+++ b/arbtt.cabal
@@ -76,7 +76,7 @@ executable arbtt-stats
     main-is:            stats-main.hs
     hs-source-dirs:     src
     build-depends:
-        base == 4.5.* || == 4.6.* || == 4.7.*,
+        base == 4.5.* || == 4.6.* || == 4.7.* || == 4.8.*,
         parsec == 3.*,
         containers == 0.5.*,
         pcre-light, old-locale,
@@ -110,7 +110,7 @@ executable arbtt-dump
     main-is:            dump-main.hs
     hs-source-dirs:     src
     build-depends:
-        base == 4.5.* || == 4.6.* || == 4.7.*,
+        base == 4.5.* || == 4.6.* || == 4.7.* || == 4.8.*,
         parsec == 3.*,
         containers == 0.5.*,
         aeson == 0.6.* || == 0.7.* || == 0.8.*,
@@ -139,7 +139,7 @@ executable arbtt-import
     main-is:            import-main.hs
     hs-source-dirs:     src
     build-depends:
-        base == 4.5.* || == 4.6.* || == 4.7.*,
+        base == 4.5.* || == 4.6.* || == 4.7.* || == 4.8.*,
         parsec == 3.*,
         containers == 0.5.*,
         binary >= 0.5,
@@ -163,7 +163,7 @@ executable arbtt-recover
     main-is:            recover-main.hs
     hs-source-dirs:     src
     build-depends:
-        base == 4.5.* || == 4.6.* || == 4.7.*,
+        base == 4.5.* || == 4.6.* || == 4.7.* || == 4.8.*,
         parsec == 3.*, containers == 0.5.*,
         binary >= 0.5,
         deepseq, bytestring, utf8-string, time >= 1.4, strict,
@@ -191,7 +191,7 @@ test-suite test
   Main-is:
     test.hs
   Build-depends:
-      base == 4.5.* || == 4.6.* || == 4.7.*
+      base == 4.5.* || == 4.6.* || == 4.7.* || == 4.8.*
       , tasty >= 0.7 && < 0.11
       , tasty-golden >= 2.2.0.2  && <= 2.3
       , tasty-hunit >= 0.2  && < 0.11
