Dependencies do not allow 7.10 yet.

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ env:
 matrix:
   allow_failures:
    - env: CABALVER=head GHCVER=head
+   - env: CABALVER=1.22 GHCVER=7.10.1
 
 # Note: the distinction between `before_install` and `install` is not important.
 before_install:
