Try building with base 4.9

--- a/arbtt.cabal
+++ b/arbtt.cabal
@@ -1,5 +1,5 @@
 name:               arbtt
-version:            0.9.0.2
+version:            0.9.0.3
 license:            GPL
 license-file:       LICENSE
 category:           Desktop
@@ -40,7 +40,7 @@ executable arbtt-capture
     main-is:            capture-main.hs
     hs-source-dirs:     src
     build-depends:
-        base == 4.5.* || == 4.6.* || == 4.7.* || == 4.8.*,
+        base == 4.5.* || == 4.6.* || == 4.7.* || == 4.8.* || == 4.9.*,
         filepath, directory, transformers, utf8-string,
         aeson == 0.6.* || == 0.7.* || == 0.8.*,
         binary >= 0.5,
@@ -87,7 +87,7 @@ executable arbtt-stats
     main-is:            stats-main.hs
     hs-source-dirs:     src
     build-depends:
-        base == 4.5.* || == 4.6.* || == 4.7.* || == 4.8.*,
+        base == 4.5.* || == 4.6.* || == 4.7.* || == 4.8.* || == 4.9.*,
         parsec == 3.*,
         containers == 0.5.*,
         pcre-light,
@@ -128,7 +128,7 @@ executable arbtt-dump
     main-is:            dump-main.hs
     hs-source-dirs:     src
     build-depends:
-        base == 4.5.* || == 4.6.* || == 4.7.* || == 4.8.*,
+        base == 4.5.* || == 4.6.* || == 4.7.* || == 4.8.* || == 4.9.*,
         parsec == 3.*,
         containers == 0.5.*,
         aeson == 0.6.* || == 0.7.* || == 0.8.*,
@@ -162,7 +162,7 @@ executable arbtt-import
     main-is:            import-main.hs
     hs-source-dirs:     src
     build-depends:
-        base == 4.5.* || == 4.6.* || == 4.7.* || == 4.8.*,
+        base == 4.5.* || == 4.6.* || == 4.7.* || == 4.8.* || == 4.9.*,
         parsec == 3.*,
         containers == 0.5.*,
         binary >= 0.5,
@@ -192,7 +192,7 @@ executable arbtt-recover
     main-is:            recover-main.hs
     hs-source-dirs:     src
     build-depends:
-        base == 4.5.* || == 4.6.* || == 4.7.* || == 4.8.*,
+        base == 4.5.* || == 4.6.* || == 4.7.* || == 4.8.* || == 4.9.*,
         containers == 0.5.*,
         binary >= 0.5,
         deepseq, bytestring, utf8-string,
@@ -226,7 +226,7 @@ test-suite test
   Main-is:
     test.hs
   Build-depends:
-      base == 4.5.* || == 4.6.* || == 4.7.* || == 4.8.*
+      base == 4.5.* || == 4.6.* || == 4.7.* || == 4.8.* || == 4.9.*,
       , tasty >= 0.7 && < 0.11
       , tasty-golden >= 2.2.0.2  && <= 2.4
       , tasty-hunit >= 0.2  && < 0.11
