--- a/arbtt.cabal
+++ b/arbtt.cabal
@@ -40,11 +40,11 @@ executable arbtt-capture
     main-is:            capture-main.hs
     hs-source-dirs:     src
     build-depends:
-        base == 4.7.* || == 4.8.*,
-        filepath, directory, transformers, utf8-string,
-        aeson >= 0.6  && < 0.12,
-        binary >= 0.5,
-        bytestring, deepseq
+                base >= 4.7 && < 4.10,
+                filepath, directory, transformers, utf8-string,
+                aeson >= 0.6  && < 0.12,
+                binary >= 0.5,
+                bytestring, deepseq
 
     if flag(old-locale)
         build-depends: time == 1.4.*, old-locale
@@ -98,7 +98,7 @@ executable arbtt-stats
     main-is:            stats-main.hs
     hs-source-dirs:     src
     build-depends:
-        base == 4.7.* || == 4.8.*,
+        base >= 4.7 && < 4.10,
         parsec == 3.*,
         containers == 0.5.*,
         pcre-light,
@@ -142,7 +142,7 @@ executable arbtt-dump
     main-is:            dump-main.hs
     hs-source-dirs:     src
     build-depends:
-        base == 4.7.* || == 4.8.*,
+        base >= 4.7 && < 4.10,
         parsec == 3.*,
         containers == 0.5.*,
         aeson >= 0.6  && < 0.12,
@@ -179,7 +179,7 @@ executable arbtt-import
     main-is:            import-main.hs
     hs-source-dirs:     src
     build-depends:
-        base == 4.7.* || == 4.8.*,
+        base >= 4.7 && < 4.10,
         parsec == 3.*,
         containers == 0.5.*,
         binary >= 0.5,
@@ -212,7 +212,7 @@ executable arbtt-recover
     main-is:            recover-main.hs
     hs-source-dirs:     src
     build-depends:
-        base == 4.7.* || == 4.8.*,
+        base >= 4.7 && < 4.10,
         containers == 0.5.*,
         binary >= 0.5,
         deepseq, bytestring, utf8-string,
@@ -249,7 +249,7 @@ test-suite test
   Main-is:
     test.hs
   Build-depends:
-      base == 4.7.* || == 4.8.*
+      base >= 4.7 && < 4.10
       , tasty >= 0.7 && < 0.12
       , tasty-golden >= 2.2.0.2  && <= 2.4
       , tasty-hunit >= 0.2  && < 0.11
