--- a/arbtt.cabal
+++ b/arbtt.cabal
@@ -253,7 +253,7 @@ test-suite test
       , tasty >= 0.7 && < 0.12
       , tasty-golden >= 2.2.0.2  && <= 2.4
       , tasty-hunit >= 0.2  && < 0.11
-      , process-extras == 0.2.* || == 0.3.* || == 0.4
+      , process-extras == 0.2.* || == 0.3.* || == 0.4.*
       , deepseq
       , binary >= 0.5
       , bytestring
