--- a/.travis.yml
+++ b/.travis.yml
@@ -33,15 +33,15 @@ install:
  - test -z "$STACK" || stack build --only-dependencies
 
 script:
- - test -z "$CABALVER" || $W cabal configure --enable-tests --enable-benchmarks -v2
- - test -z "$CABALVER" || $W cabal build
- - test -z "$CABALVER" || $W cabal test
- - test -z "$CABALVER" || $W cabal check
- - test -z "$CABALVER" || $W cabal sdist
+ - test -z "$CABALVER" -a -z "$WINDOWS" || $W cabal configure --enable-tests --enable-benchmarks -v2
+ - test -z "$CABALVER" -a -z "$WINDOWS" || $W cabal build
+ - test -z "$CABALVER" -a -z "$WINDOWS" || $W cabal test
+ - test -z "$CABALVER" -a -z "$WINDOWS" || $W cabal check
+ - test -z "$CABALVER" -a -z "$WINDOWS" || $W cabal sdist
  - test -z "$STACK" || stack build --test
 
 # The following scriptlet checks that the resulting source distribution can be built & installed
- - test -z "$CABALVER" || {
+ - test -z "$CABALVER" -a -z "$WINDOWS" || {
    export SRC_TGZ=$($W cabal info . | awk '{print $2 ".tar.gz";exit}') ;
    cd dist/;
    if [ -f "$SRC_TGZ" ]; then
