--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ before_install:
  - if [ "$WINDOWS" = yes ]; then export W=wine; else export W=""; fi
  - text -z "$WINDOWS"  || bash ./.travis-setup-windows.sh
  - test -z "$CABALVER" || bash ./.travis-setup-linux.sh
+ - test -z "$STACK" || sudo apt-get install g++ gcc libc6-dev libffi-dev libgmp-dev make xz-utils zlib1g-dev
  - test -z "$STACK" || stack setup --resolver $STACK
 
 
