--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ before_install:
 
 
 install:
- - test -z "$STACK" || echo "resolver: lts-1.0" > stack.yaml # dummy value
+ - 'test -z "$STACK" || echo "resolver: lts-1.0" > stack.yaml # dummy value'
  - test -z "$STACK" || stack solver --update-config --resolver "$STACK"
  - test -z "$STACK" || stack build --only-dependencies
 
